@@ -3,6 +3,8 @@ Changes to Version 2.2-2
   o Updated Galician translation (thanks to Rafael Rodriguez Gayoso).
   
   o Fixes to French translation (by Milan Bouchet-Valat).
+  
+  o Added keep argument to popOutput() (suggestion of Liviu Andronic); similar argument added to popCommand().
 
 Changes to Version 2.2-1
 
